--- a/formulario.css
+++ b/formulario.css
@@ -6,7 +6,8 @@
 #titulo{
   font-family: sans-serif;
   color: #380B61;
-margin-left: 7%
+margin-left: 7%;
+margin-bottom: 20px;
 }
 
 #subtitulo{
@@ -41,7 +42,10 @@ fieldset{
     color: #59429d;
     display: black;
   }
-
+fildset.grupo .campo{
+  float: left;
+  margin-left: 1em;
+}
   .botao{
     padding: 10px 20px; 
 
