--- a/formulario.css
+++ b/formulario.css
@@ -46,8 +46,41 @@ fildset.grupo .campo{
   float: left;
   margin-left: 1em;
 }
+
+.campo input[type="text"], .campo input[type="email"], .campo select {
+  padding: 0.2em;
+  border: 1px solid #59429d;
+  box-shadow: 2px 2px 2px rgba(0,0,0,.2);
+  display: block;
+
+}
+.campo select option{
+  padding-right: 1em;
+}
+
+.campo input:focus, .campo select:focus {
+  background: #E0E0F8;
+
+}
   .botao{
-    padding: 10px 20px; 
+    font-size: 1.2em;
+    background: #59429d;
+    border: 0;
+    margin-bottom: 1em;
+    color: #ffffff;
+    padding: 0.2em; 0.6em;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    
+  }
 
-
+  .botao:hover {
+    background: #685d85;
+    box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2);
+    text-shadow: none;
   }
